# gqc-agent

./: .gitignore  LICENSE  README.md  gqc_testing_notebook.ipynb  pyproject.toml  requirements.txt
gqc_agent/: __init__.py
gqc_agent/core/: client.py  orchestrator.py
gqc_agent/core/_constants/: constants.py
gqc_agent/core/_intent_classifier/: classifier.py
gqc_agent/core/_llm_models/: gemini_client.py  gemini_models.py  gpt_client.py  gpt_models.py
gqc_agent/core/_note_creator/: note_creator.py
gqc_agent/core/_query_rephraser/: rephraser.py
gqc_agent/core/_system_prompts/: intent_classifier.md  note_creator.md
gqc_agent/core/_validations/: checks.py  get_supported_models.py  input_validator.py  model_validator.py
gqc_agent/core/intent_classifier/: classifier.py
gqc_agent/core/note_creator/: note_creator.py
gqc_agent/core/query_rephraser/: rephraser.py
gqc_agent/core/system_prompts/: intent_classifier.md  loader.py  query_rephraser.md  version1.md
