[project]
name = "gqc-agent"          # PyPI package name
version = "1.0.0"
description = "GQC Agent provides a multi-agent AI pipeline for intent classification, query rephrasing, and note creation using GPT and Gemini models."
authors = [
  { name="BE Developers", email="be.dev@bigentities.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

# --- CORE DEPENDENCIES (Installed by default when user installs gqc-agent) ---
dependencies = [
  "openai>=2.8.1",
  "google-genai>=1.52.0",
  "pydantic>=2.12.5",
  "python-dotenv>=1.2.1",
  "requests>=2.32.5",
  "httpx>=0.28.1",
  "anyio>=4.12.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
